--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
+body {
+  background-image: url('./resources/wallpaper_dark\ 1.7520cc85540e952b1548.svg');
+  background-repeat: no-repeat;
+  background-position-x: center;
+
+  font-family: _semibold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 768px) {
+  body {
+    background-image: url('./resources/wallpaper_dark\ 1.7520cc85540e952b1548.svg');
+    background-repeat: no-repeat;
+    background-position-x: 50%;
   }
 }
