--- a/src/components/home/components/pages/pages/home/components/recently-visited/recentlyvisited.css
+++ b/src/components/home/components/pages/pages/home/components/recently-visited/recentlyvisited.css
@@ -2,9 +2,8 @@
 
 #recentvisit-body{
   width: calc(100% - 30px);
-  aspect-ratio: 0.2/1;
+  height: max-content;
   min-height: 300px;
-  max-height: 600px;
   
   border-radius: 15px;
 
@@ -15,7 +14,7 @@
 }
 
 
-@media screen and (min-width: 1020px) {
+@media screen and (min-width: 1400px) {
   #recentvisit-body {
     width: calc(55% - 25px - 60px);
     height: calc(100% - 50px - 30px);
