--- a/src/components/home/components/pages/pages/settings/settings.css
+++ b/src/components/home/components/pages/pages/settings/settings.css
@@ -54,6 +54,32 @@
   transform: translateY(-50%);
 }
 
+#settings-dropdown {
+  width: 110px;
+  height: 1.6rem;
+
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  padding: 0px 10px 0px 10px;
+
+  border-radius: 20px;
+  border: none;
+  outline: none;
+
+  background-color: rgb(245, 245, 245, 0.4);
+  color: #F5F5F5;
+
+  font-family: _bold;
+  font-size: 16px
+}
+
+option {
+  background-color: rgb(245, 245, 245, 0.4);
+  opacity: 0.4;
+  color: #0F131A;
+}
+
 
 
 
