--- a/src/components/home/components/pages/pages/home/components/recently-visited/recentlyvisited.css
+++ b/src/components/home/components/pages/pages/home/components/recently-visited/recentlyvisited.css
@@ -13,6 +13,85 @@
   top: 20px;
 }
 
+#recentvisit-maindiv {
+  width: 100%;
+  height: calc(100% - 2.2rem - 13px - 30px);
+
+  background-color: transparent;
+
+  overflow-y: scroll;
+  overflow-x: visible;
+
+  align-content: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: flex-start;
+}
+
+#recentvisit-maindiv::-webkit-scrollbar {
+  display: none;
+}
+
+#AppButton-body_RecentVisit {
+  width: calc(50% - 10px);
+  aspect-ratio: 1/1;
+
+  background-color: rgb(15, 19, 26, 0.4);
+
+  box-shadow: 0px 0px 30px 0px rgb(23, 28, 35, 0.4);
+
+  border-radius: 20px;
+
+  cursor: pointer;
+
+  transition: 0.35s;
+}
+#AppButton-body_RecentVisit:hover {
+  scale: 1.05;
+}
+
+#AppButton-AppInfo_RecentVisit {
+  width: max-content;
+  min-width: 70px;
+  max-width: 50%;
+  height: max-content;
+
+  background-color: transparent;
+  text-align: center;
+
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#AppButton-image_RecentVisit {
+  width: 100%;
+  aspect-ratio: 1/1;
+
+  background-position: center;
+  background-size: cover;
+
+  background-color: transparent;
+
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#AppButton-name_RecentVisit {
+  font-family: _bold;
+  font-size: 1.1rem;
+  color: #F5F5F5;
+  margin-top: 5px;
+
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+
+  width: max-content
+}
 
 @media screen and (min-width: 1400px) {
   #recentvisit-body {
@@ -28,5 +107,71 @@
     position: absolute;
     top: 0px;
     right: 0px
+  }
+
+  #recentvisit-maindiv {
+    width: 100%;
+    height: calc(100% - 2.5rem - 50px);
+
+    background-color: transparent;
+
+    overflow-y: scroll;
+    overflow-x: visible;
+
+    align-content: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: start;
+  }
+
+  #AppButton-body_RecentVisit {
+    width: calc(50% - 14px);
+    aspect-ratio: 1/1;
+
+    background-color: rgb(15, 19, 26, 0.4);
+
+    box-shadow: 0px 0px 30px 0px rgb(23, 28, 35, 0.4);
+
+    border-radius: 30px;
+  }
+  #AppButton-AppInfo_RecentVisit {
+    width: 50%;
+    height: max-content;
+
+    background-color: transparent;
+    text-align: center;
+
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  #AppButton-image_RecentVisit {
+    width: 100%;
+    aspect-ratio: 1/1;
+
+    background-position: center;
+    background-size: cover;
+
+    background-color: transparent;
+
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  #AppButton-name_RecentVisit {
+    font-family: _bold;
+    font-size: 1.7rem;
+    color: #F5F5F5;
+    margin-top: 10px;
+
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+
+    width: max-content
   }
 }
